[package]
name = "cpc"
version = "0.1.0"
authors = ["Junyoung/Clare Jang"]
edition = "2021"
description = "Core Proof Checker"
repository = "https://github.com/Ailrun/cpc"
license = "BSD-3-Clause-No-Military-License"

[lib]
test = false
doctest = false

[[bin]]
name = "cpc"
test = false

[dependencies]
nom = "^7.1.3"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.42.0", features = ["ron"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
