[package]
name = "cpc"
version = "0.1.0"
authors = ["Junyoung/Clare Jang"]
edition = "2021"
description = "Core Proof Checker"
readme = "README.md"
repository = "https://github.com/Ailrun/cpc"
license = "BSD-3-Clause-No-Military-License"
keywords = ["Proof Assistant", "Dependent Type", "Language", "Interpreter"]
categories = ["mathematics", "compilers"]


[lib]
doctest = false

[[bin]]
name = "cpc"
doc = true
test = false

[dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
nom = "^7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
pretty = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.42.0", features = ["ron"], default-features = false }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
